--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral-item/experiencia-laboral-item.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral-item/experiencia-laboral-item.component.html
@@ -1,8 +1,7 @@
 <div class="d-flex align-items-baseline gap-1 container"> 
         <p id="titulo">{{experiencia.puesto}}</p>                        
-        <div class="d-flex gap-1">
-                <p>@</p>
-                <a href="{{experiencia.urlEmpresa}}" target="_blank">{{experiencia.empresa}}</a>
+        <div class="d-flex">
+                <a href="{{experiencia.urlEmpresa}}" target="_blank">@ {{experiencia.empresa}}</a>
         </div>                        
 </div>
 <div>
