--- a/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica.component.css
+++ b/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica.component.css
@@ -1,9 +1,12 @@
 #container {
     width: 70%;
-    opacity: 0;
+    opacity: 1;
     transform: translateY(0px);
-    transition: all 0.5s ease;
-    height: 500px;    
+    transition: all 0.5s ease;  
+}
+
+section {
+    padding: 200px 0px;
 }
 
 h3{
@@ -54,8 +57,8 @@ fa-icon:hover{
     width: 75%;
 }
 
-.container-lista-exp {
-   width: 30%;
+.container-lista-educacion {
+   width: 35%;
    margin-right: 10px;       
 }
 
@@ -66,31 +69,31 @@ fa-icon:hover{
     
 }
 
-.container-items-exp {
-    width: 70%;
+.container-items-educacion {
+    width: 65%;
 }
 
-.container-primer-exp{
-    margin-top: 6px
+.container-titulo-primer-educacion{
+    margin-top: 2px
 }
 
-#titulo-primer-exp {
+.container-titulo-primer-educacion > a {
     font-weight:bold;
+    font-size: 17px;
     color:white !important
 }
 
-#duracion-primer-exp {
-    font-size:14px; 
-    margin-top:-10px
+#duracion-primer-educacion {
+    font-size:14px;
+    margin-top: 5px;
 }
 
-.container-primer-exp>div>p, a{
-    color: lightblue;
+.container-titulo-primer-educacion>a:hover, a:hover{
+    color: lightblue !important;
 }
-
 
 a:link, a:visited{
-    color: lightblue;
+    color: white;
     text-decoration: none;
 }
 
@@ -105,7 +108,7 @@ a::after{
     width: 100%;
     height: 2px ;
     left: 0;
-    bottom: 40%;
+    bottom: 7%;
     background-color: lightblue;
     transform-origin: bottom left;
     transform: scaleX(0);
@@ -117,24 +120,24 @@ a:hover::after{
     transform: scaleX(1)
 }
 
-.boton-exp-item {
+.boton-educacion-item {
     background-color: black;
     color: white;
     display: flex;
     align-items: center;
-    height: 45px;
-    font-size: 15px;
+    height: 70px;
+    font-size: 15.5px;
     padding: 0px 15px;    
     width: 100%;        
     text-align: left;
     border-left: solid 2px #495670;       
 }
 
-.boton-exp-item-seleccionado {
+.boton-educacion-item-seleccionado {
     color: rgb(188, 230, 248)      
 }
 
-.boton-exp-item:hover{
+.boton-educacion-item:hover{
     color:rgb(188, 230, 248);
     background-color: #495670;    
 }
@@ -146,22 +149,14 @@ a:hover::after{
     border-radius: 4px;
     top: 0px;
     left: 0px;   
-    height: 45px;
+    height: 70px;
     background-color: aqua;    
 }
 
 .animacion-lista-seleccion{    
-    transform: translateY(var(--exp-bar-position-Y));    
+    transform: translateY(var(--educacion-bar-position-Y));    
     transition: transform 0.25s ease;           
 } 
-
-.exp-bar-Y--45 {
-    --exp-bar-position-Y:45px
-}
-
-.exp-bar-Y--90 {
-    --exp-bar-position-Y:90px
-}
 
 
 @media screen and (max-width: 1050px) {
@@ -169,27 +164,25 @@ a:hover::after{
    
     section {
         margin-top: 50px;
-        align-items: center !important;
+
     }
 
-    #container-items-lista-exp{
+    #container-items-lista-educacion{
         display: block !important
 
     }
-    .container-items-exp{
+    .container-items-educacion{
         width: 100%;
     }
-    .container-primer-exp{
+    .container-titulo-primer-educacion{
         display:block !important;
         margin-top: 20px
     }
     a::after{
         bottom: 7%
     }
-    a {
-        margin-bottom: 30px
-    }
-    .container-lista-exp {
+    
+    .container-lista-educacion {
         display: flex;
         margin-right: 0px !important;
         width: 100% !important;
@@ -197,23 +190,20 @@ a:hover::after{
         overflow-y: hidden      
     }
 
-    .boton-exp-item{
+    .boton-educacion-item{
         border-left: none !important;
-        min-width: 150px;
+        min-width: 310px;
         height: auto;          
         padding: 0px 20px !important;
         text-align: center;          
         }    
-    .boton-exp-item-seleccionado {
+    .boton-educacion-item-seleccionado {
         background-color: #495670;      
     }
 
     .lista-seleccion {
         display:none             
     }
-    .animacion-lista-seleccion{    
-        transform: translateX(var(--exp-bar-position-X)) !important;             
-    } 
 }
 
 @media screen and (max-width:1400px) {   
