--- a/Proyecto-Angular/src/app/components/header/header.component.html
+++ b/Proyecto-Angular/src/app/components/header/header.component.html
@@ -39,7 +39,7 @@
                         <a class="nav-link link" href="#contacto" (click)="contraerNav()">Contacto</a>
                     </li>
                     <li class="nav-item ms-2">
-                        <a class="nav-link" href="https://drive.google.com/file/d/128Fr4-4NTl4tOaN1A0ddEX3arm-wKYz2/view?usp=sharing" target="_blank"> 
+                        <a class="nav-link" href="https://drive.google.com/file/d/1ydClG_5Vd0l7J2m0kDwPLylX8tpuMv9C/view" target="_blank"> 
                             <button id="boton_cv" (click)="contraerNav()">Currículum</button>
                         </a>
                     </li>                    
