--- a/Proyecto-Angular/src/app/components/proyectos/proyectos-item/proyectos-item.component.css
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos-item/proyectos-item.component.css
@@ -13,6 +13,10 @@ h4{
     transform: scale(0.96);
 }
 
+#contenedor-descripcion {
+    height:180px
+}
+
 img {
     width: 100%; 
     height: 300px;
@@ -22,6 +26,7 @@ img {
     width: 50%;
     margin-left:auto;
     height: 300px;
+   
     
 }
 
@@ -83,6 +88,19 @@ img {
    }
    #icono-flecha{
     top:5%
+   }
+
+   #contenedor-descripcion{
+    overflow-y: auto;
+    height: 150px !important;
+    
+  
+   }
+
+   .contenedor-tecnologias-iconos>div{
+        gap: 1 !important;
+        margin-bottom: auto !important;
+        overflow-y: auto;
    }
    
 }
