--- a/Proyecto-Angular/src/styles.css
+++ b/Proyecto-Angular/src/styles.css
@@ -3,7 +3,7 @@
 
 :root {
     --skills-bar-length: 0%;
-    --exp-bar-position-Y: 0px
+    --exp-bar-position-Y: 0px;
 }
 
 body {
@@ -23,9 +23,10 @@ section > div{
 }
 
 section {
-    min-height: 100vh;
-    height: auto;    
+    min-height: 100vh
 }
+
+
 
 footer {
     background: #000000;
