--- a/Proyecto-Angular/src/app/components/contacto/contacto.component.css
+++ b/Proyecto-Angular/src/app/components/contacto/contacto.component.css
@@ -1,3 +1,4 @@
+
 #container {
     width: 60%;
     margin-top:70px;    
@@ -5,6 +6,7 @@
 
 h3{
     color: lightblue;
+    text-align: center;
 }
 
 .icono-edicion{
@@ -18,6 +20,12 @@ h3{
     font-size: 1.3em;
     position: relative;
     color:gray
+}
+
+#container-info fa-icon {
+    position: absolute;
+    margin-left: 20%;
+    margin-top: -3%    
 }
 
 
@@ -41,21 +49,17 @@ h3{
     width: 11em
 }
 
-#container-form{
+#container-form, #container-info{
     width: 50%;
     padding: 10px 40px;
 }
-#container-info{
-    width: 50%;
-    padding: 10px 80px;
-}
 
-label, #formulario-contacto p{
+label, #container-form p{
     font-size: 16px;
     font-weight: bold;
 }
 
-input {
+.inputForm {
     background-color: black;
     border-color: gray;
     color: white !important;
@@ -67,20 +71,37 @@ span {
     margin-left: 10px;
 }
 
-input:focus, textarea:focus{
+.mensajeErrorCampo{   
+    padding: 4px !important;
+       
+    width: 95%;
+    margin-left: 3%;
+    margin-bottom: 0px;
+    
+}
+
+.inputForm:focus{
     background-color: black;
     border-color: green;
     box-shadow: 0px 0px 7px green;
     color: white;
 }
 
+/*  Para anular el efecto del color negro y el fondo blanco del autollenado de los inputs (en realidad no lo anula sino que pospone su efecto 600000s, o sea 10000 minutos) */
+
+.inputForm:-webkit-autofill, .inputForm:-webkit-autofill:focus {  
+    transition: background-color 600000s 0s, color 600000s 0s;
+  }
+
 textarea{
     width: 100%;
-    background-color: black;
-    border-color: gray;
-    color: white;
+    padding: 0.375rem 0.75rem !important;
     height: 90px;
     overflow: auto;
+}
+
+#container-info div {
+    margin-left: 20%
 }
 
 
@@ -92,13 +113,16 @@ textarea{
 
     #container-form, #container-info{
         width: 100%;
-        padding: 10px 40px;
     }
 
     #container-form{
         margin-bottom:20px
     }
 
+    #container-info div {
+        margin-left: 0px;
+       
+    }
 
-    
+        
 }
