--- a/Proyecto-Angular/src/app/components/header/header.component.html
+++ b/Proyecto-Angular/src/app/components/header/header.component.html
@@ -55,7 +55,7 @@
                     </button>
                     <button                        
                         id="boton_logout" 
-                        (click)="contraerNav(); alternarEdicion()" 
+                        (click)="contraerNav(); alternarEdicion(); alternarBtnLoggin()" 
                         *ngIf="modoEdicion">
                         Logout 
                     </button>
