--- a/Proyecto-Angular/src/app/components/footer/footer.component.html
+++ b/Proyecto-Angular/src/app/components/footer/footer.component.html
@@ -1,8 +1,35 @@
-<footer class="w-100 flex-wrap p-2">  
-    <div class="d-flex align-items-center justify-content-center" id="iconos">                
-        <a href="#" class="mx-2"><img src="../assets/Instagram.png"></a>
-        <a href="#" class="mx-2"><img src="../assets/Linkedin.png" ></a>
-        <a href="#" class="mx-2"><img src="../assets/GitHub.png" style="height:60px"></a>
+<footer>  
+    <div class="d-flex align-items-center justify-content-center gap-4 mb-2" id="container-iconos">                
+        <a title="Seguime en Instagram" class="link-redes" target="_blank" href="https://www.instagram.com/julianmeneses1/">
+            <img src="../assets/Instagram.png">
+        </a>
+        <a title="Contactame en Linkedin" class="link-redes" target="_blank" href="https://www.linkedin.com/in/juli%C3%A1n-meneses-97316b245/" >
+            <img src="../assets/Linkedin.png" id="imagenLinkedin">
+        </a>
+        <a title="Mira mi perfil en GitHub" target="_blank" href="https://github.com/JulianMeneses1" >
+            <img src="../assets/GitHub.png" id="imagenGitHub">
+        </a>
     </div>
       
 </footer>
+
+
+<!-- <div id="contenedor-iconos-redes">
+    <div class="d-flex">        
+        <button class="botones-redes">
+            <a title="Seguime en Instagram" class="link-redes" target="_blank" href="https://www.instagram.com/julianmeneses1/">
+                <img class="iconos-redes" src="../assets/Instagram.png">
+            </a>
+        </button>
+        <button class="botones-redes" >
+            <a title="Contactame en Linkedin" class="link-redes" target="_blank" href="https://www.linkedin.com/in/juli%C3%A1n-meneses-97316b245/">
+                <img class="iconos-redes" src="../assets/Linkedin.png">
+            </a>
+        </button>
+        <button id="boton-github">
+            <a title="Mira mi perfil en GitHub" target="_blank" href="https://github.com/JulianMeneses1">
+                <img id="icono-github" src="../assets/GitHub.png">
+            </a>
+        </button>      
+    </div>
+</div> -->
