--- a/Proyecto-Angular/src/app/components/header/modal-login/modal-login.component.html
+++ b/Proyecto-Angular/src/app/components/header/modal-login/modal-login.component.html
@@ -9,42 +9,62 @@
             <div class="modal-header justify-content-center">
                 <h3 class="modal-title" id="loginModalLabel">Iniciar Sesión</h3>                        
             </div>
-            <div class="modal-body">
-                <label for="user" class="form-label">Usuario</label>         
-                <input
-                    #usuario
-                    class="form-control" 
-                    type="text" 
-                    id="user" 
-                    name="user" 
-                    placeholder="Ingrese su usuario" 
-                    maxlength="15">
-                <label for="password" class="form-label">Contraseña</label>      
-                <input
-                    #contraseña
-                    class="form-control" 
-                    type="password" 
-                    id="password" 
-                    name="password"
-                    maxlength="15" 
-                    placeholder="Ingrese su contraseña" >
-            </div>
-            <div class="modal-footer d-flex justify-content-between">
-                <button 
-                    type="button" 
-                    class="btn btn-danger"                     
-                    data-bs-dismiss="modal"
-                    (click)="resetearInputs()">
-                    Cerrar
-                </button>
-                <button 
-                    type="button" 
-                    class="btn btn-primary"                    
-                    (click)="alternarEdicion(); resetearInputs()"
-                    data-bs-dismiss="modal">
-                    Ingresar
-                </button>
-            </div>
+            <form (ngSubmit)="onSubmit()" [formGroup]="formularioLogin">
+                <div class="modal-body">
+                    
+                        <label for="user" class="form-label">Usuario</label>         
+                        <input
+                            #usuario
+                            class="form-control" 
+                            type="text" 
+                            id="user" 
+                            name="user" 
+                            placeholder="Ingrese su usuario" 
+                            maxlength="15"
+                            formControlName="usuario"
+                            (click)="ocultarMensajeError()">
+                        <div 
+                            class="mensajeErrorCampo alert alert-danger" 
+                            *ngIf="formularioInvalido && formularioLogin.get('usuario')?.errors?.['required']">
+                            Este campo es obligatorio
+                        </div>
+                        <label for="password" class="form-label">Contraseña</label>                          
+                        <input
+                            #contraseña
+                            class="form-control" 
+                            type="password" 
+                            id="password" 
+                            name="password"
+                            maxlength="15" 
+                            placeholder="Ingrese su contraseña"
+                            formControlName="contraseña"
+                            (click)="ocultarMensajeError()">
+                        <div 
+                            class="mensajeErrorCampo alert alert-danger" 
+                            *ngIf="formularioInvalido && formularioLogin.get('contraseña')?.errors?.['required']">
+                            Este campo es obligatorio
+                        </div>    
+                    
+                </div>
+                <div class="modal-footer d-flex justify-content-between">
+                    <button 
+                        type="button" 
+                        class="btn btn-danger"                     
+                        data-bs-dismiss="modal"
+                        (click)="resetearInputs(); toggleBtnLoggin()">
+                        Cerrar
+                    </button>
+                    <button
+                        #botonLogin 
+                        type="submit" 
+                        class="btn btn-primary"                    
+                        (click)="resetearInputs()"
+                        [disabled]="!habilitarBotonLogin">
+                        Ingresar
+                    </button>
+                    
+                </div>
+            </form>
         </div>
     </div>
 </div>
